Add header element in html. #1

--- a/source/index.html
+++ b/source/index.html
@@ -8,5 +8,8 @@
     <link rel="stylesheet" href="assets/stylesheets/app.css">
   </head>
   <body>
+    <header>
+      
+    </header>
   </body>
 </html>
