--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/stylesheets/app.css">
   </head>
   <body>
-    <header>
-      
+    <header class="header">
+
     </header>
   </body>
 </html>
