--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="assets/stylesheets/app.css">
   </head>
   <body>
-    <header class="header">
-
+    <header id="header">
+      <nav id="nav-links">
+        
+      </nav>
     </header>
   </body>
 </html>
