Add a Envoy logo. #1

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="header">
       <nav id="nav-links">
-        
+        <img src="../src-images/envoy-logo.png" alt="envoy-logo">
       </nav>
     </header>
   </body>
