Add link texts to nav bar. #1

--- a/source/index.html
+++ b/source/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Envoy Code Test</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/app.css">
   </head>
   <body>
     <header id="header">
       <nav id="nav-links">
-        <img src="../src-images/envoy-logo.png" alt="envoy-logo">
+        <h1 id="logo">ENVOY</h1>
+        <ul>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#ventures">Ventures</a></li>
+          <li><a href="#about" id="about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#blog">Blog</a></li>
+        </ul>
       </nav>
     </header>
   </body>
