Add a container for twitter. #1

--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,9 @@
           <li><a href="#blog">Blog</a></li>
         </ul>
       </nav>
+      <div id="twitter-container">
+
+      </div>
     </header>
   </body>
 </html>
