--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Envoy Code Test</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/stylesheets/app.css">
   </head>
   <body>
@@ -22,7 +23,8 @@
         </ul>
       </nav>
       <div id="twitter-container">
-
+        <i id="twitter-logo" class="fa fa-twitter" aria-hidden="true"></i>
+        <p id="twitter-text">Tweet. Tweet.</p>
       </div>
     </header>
   </body>
