--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,9 @@
           <li><a href="#blog">Blog</a></li>
         </ul>
       </nav>
+      <div id="red-box">
+
+      </div>
       <div id="twitter-container">
         <i id="twitter-logo" class="fa fa-twitter" aria-hidden="true"></i>
         <p id="twitter-text">Tweet. Tweet.</p>
