Add plus icon in red square. #1

--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div id="red-box">
-
+        <i id="white-plus" class="fa fa-plus" aria-hidden="true"></i>
       </div>
       <div id="twitter-container">
         <i id="twitter-logo" class="fa fa-twitter" aria-hidden="true"></i>
