Add a wrapper container. #3

--- a/source/index.html
+++ b/source/index.html
@@ -30,5 +30,8 @@
         <p id="twitter-text">Tweet. Tweet.</p>
       </div>
     </header>
+    <div id="wrapper">
+      
+    </div>
   </body>
 </html>
