Add container to hold the Django image. #3

--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,11 @@
       </div>
     </header>
     <div id="wrapper">
-      
+      <div id="main-image">
+        <div id="django">
+          <img src="upload/django.png" alt="Django Image">
+        </div>
+      </div>
     </div>
   </body>
 </html>
