Add Django image and red ink splash to the background. #3

--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
     <div id="wrapper">
       <div id="main-image">
         <div id="django">
-          <img src="upload/django.png" alt="Django Image">
+          <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/django_bg.png" alt="Django Image">
         </div>
       </div>
     </div>
