Add header text in red. #3

--- a/source/index.html
+++ b/source/index.html
@@ -33,6 +33,7 @@
     <div id="wrapper">
       <div id="main-image">
         <div id="django">
+          <h1 id="catch">THE IPHONE<br>UNCHAINED.</h1>
           <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/django_bg.png" alt="Django Image">
         </div>
       </div>
