Add body text in grey. #3

--- a/source/index.html
+++ b/source/index.html
@@ -34,6 +34,9 @@
       <div id="main-image">
         <div id="django">
           <h1 id="catch">THE IPHONE<br>UNCHAINED.</h1>
+          <h4 id="tarantino">Tarantino's outrageous film Djano Unchained<br>
+            needed an equally in your face mobile experience <br>
+            Bloody good awesomeness ensued.</h4>
           <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/django_bg.png" alt="Django Image">
         </div>
       </div>
