Add "View Project" text next to body above in red. #3

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
           <h1 id="catch">THE IPHONE<br>UNCHAINED.</h1>
           <h4 id="tarantino">Tarantino's outrageous film Djano Unchained<br>
             needed an equally in your face mobile experience <br>
-            Bloody good awesomeness ensued.</h4>
+            Bloody good awesomeness ensued.<a id="django-project" href="#view-project"> View Project</a></h4>
           <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/django_bg.png" alt="Django Image">
         </div>
       </div>
