Add 4 list elements for indicator. #3

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <header id="header">
       <nav id="nav-links">
         <h1 id="logo">ENVOY</h1>
-        <ul>
+        <ul id="nav-menu">
           <li><a href="#work">Work</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#ventures">Ventures</a></li>
@@ -40,6 +40,12 @@
           <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/django_bg.png" alt="Django Image">
         </div>
       </div>
+      <ul id="indicator-wrap">
+        <li class="indicator"></li>
+        <li class="indicator"></li>
+        <li class="indicator" id="red-indicator"></li>
+        <li class="indicator" id="grey-indicator"></li>
+      </ul>
     </div>
   </body>
 </html>
