Add arrow icons, left in red, right in white. #3

--- a/source/index.html
+++ b/source/index.html
@@ -46,6 +46,10 @@
         <li class="indicator" id="red-indicator"></li>
         <li class="indicator" id="grey-indicator"></li>
       </ul>
+      <div class="chevrons">
+        <i id="chevron-left" class="fa fa-chevron-left" aria-hidden="true"></i>
+        <i id="chevron-right" class="fa fa-chevron-right" aria-hidden="true"></i>
+      </div>
     </div>
   </body>
 </html>
