--- a/source/index.html
+++ b/source/index.html
@@ -47,8 +47,8 @@
         <li class="indicator" id="grey-indicator"></li>
       </ul>
       <div class="chevrons">
-        <i id="chevron-left" class="fa fa-chevron-left" aria-hidden="true"></i>
-        <i id="chevron-right" class="fa fa-chevron-right" aria-hidden="true"></i>
+        <a href="#" class="arrow left"></a>
+        <a href="#" class="arrow right"></a>
       </div>
     </div>
   </body>
