Add a footer element. #5

--- a/source/index.html
+++ b/source/index.html
@@ -51,5 +51,8 @@
         <a href="#" class="arrow right"></a>
       </div>
     </div>
+    <footer id="footer">
+      
+    </footer>
   </body>
 </html>
