Add a container for Envoy intro. #5

--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,9 @@
       </div>
     </div>
     <footer id="footer">
-      
+      <div id="intro">
+        
+      </div>
     </footer>
   </body>
 </html>
