Add intro paragraph to the container above. #5

--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,11 @@
     </div>
     <footer id="footer">
       <div id="intro">
-        
+        <h1 id="sentence">
+          An independent full service creative agency helping <br>
+          brave brands build businesses and be heard in a world <br>
+          full of noise.
+        </h1>
       </div>
     </footer>
   </body>
