--- a/source/index.html
+++ b/source/index.html
@@ -59,6 +59,7 @@
           full of noise.<a id="we-are-envoy"> We are Envoy.</a>
         </h1>
       </div>
+      <div id="divider"></div>
     </footer>
   </body>
 </html>
