Add a div and title "Featured Work". #5

--- a/source/index.html
+++ b/source/index.html
@@ -52,14 +52,19 @@
       </div>
     </div>
     <footer id="footer">
-      <div id="intro">
-        <h1 id="sentence">
-          An independent full service creative agency helping <br>
-          brave brands build businesses and be heard in a world <br>
-          full of noise.<a id="we-are-envoy"> We are Envoy.</a>
-        </h1>
+      <div id="footer-wrapper">
+        <div id="intro">
+          <h1 id="sentence">
+            An independent full service creative agency helping <br>
+            brave brands build businesses and be heard in a world <br>
+            full of noise.<a id="we-are-envoy"> We are Envoy.</a>
+          </h1>
+        </div>
+        <div id="divider"></div>
+        <div class="footer-contents">
+          <h1 id="work">Featured Work</h1>
+        </div>
       </div>
-      <div id="divider"></div>
     </footer>
   </body>
 </html>
