--- a/source/index.html
+++ b/source/index.html
@@ -62,7 +62,7 @@
         </div>
         <div id="divider"></div>
         <div class="footer-contents">
-          <h1 id="work">Featured Work</h1>
+          <h1 id="work">Featured Work<a id="view-work" href="#allwork"> View All Work</a></h1>
         </div>
       </div>
     </footer>
