Add a container for work contents, divide it by 3 column. #5

--- a/source/index.html
+++ b/source/index.html
@@ -61,8 +61,16 @@
           </h1>
         </div>
         <div id="divider"></div>
-        <div class="footer-contents">
+        <div class="footer-contents-wrapper">
           <h1 id="work">Featured Work<a id="view-work" href="#allwork"> View All Work</a></h1>
+          <div class="footer-contents">
+            <div class="col-3">
+            </div>
+            <div class="col-3">
+            </div>
+            <div class="col-3 last">
+            </div>
+          </div>
         </div>
       </div>
     </footer>
