three images added to footer. #5

--- a/source/index.html
+++ b/source/index.html
@@ -65,10 +65,13 @@
           <h1 id="work">Featured Work<a id="view-work" href="#allwork"> View All Work</a></h1>
           <div class="footer-contents">
             <div class="col-3">
+              <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/boostmobile.png" alt="Boost Mobile">
             </div>
             <div class="col-3">
+              <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/pearsports.png" alt="Pear Sports">
             </div>
             <div class="col-3 last">
+              <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/511.png" alt="511">
             </div>
           </div>
         </div>
