Add paragraph for each photos. #5

--- a/source/index.html
+++ b/source/index.html
@@ -66,12 +66,15 @@
           <div class="footer-contents">
             <div class="col-3">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/boostmobile.png" alt="Boost Mobile">
+              <h3 class="work-title">Boost Mobile <a class="blue-text">Rebrand</a></h3>
             </div>
             <div class="col-3">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/pearsports.png" alt="Pear Sports">
+              <h3 class="work-title">Pear Sports <a class="blue-text">Training Portal</a></h3>
             </div>
             <div class="col-3 last">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/511.png" alt="511">
+              <h3 class="work-title">5.11<a class="blue-text"> Ultimate Training Experience</a></h3>
             </div>
           </div>
         </div>
