--- a/source/index.html
+++ b/source/index.html
@@ -67,14 +67,29 @@
             <div class="col-3">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/boostmobile.png" alt="Boost Mobile">
               <h3 class="work-title">Boost Mobile <a class="blue-text">Rebrand</a></h3>
+              <p class="work-text">
+                Boost Mobile recognized the need to elevate <br>
+                and refresh its brand to speak to a broader <br>
+                audience. The result was an evolved logo, ...
+              </p>
             </div>
             <div class="col-3">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/pearsports.png" alt="Pear Sports">
               <h3 class="work-title">Pear Sports <a class="blue-text">Training Portal</a></h3>
+              <p class="work-text">
+                Pear Sports revolutionary training systems and <br>
+                fitness apps were getting lost in a crowded <br>
+                marketplace. Envoy rebuilt the story and ...
+              </p>
             </div>
             <div class="col-3 last">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/511.png" alt="511">
               <h3 class="work-title">5.11<a class="blue-text"> Ultimate Training Experience</a></h3>
+              <p class="work-text">
+                5.11, the industry leader in tactical gear turned <br>
+                to Envoy to bring their "Ultimate Training <br>
+                Challenge" to life in the digital space ...
+              </p>
             </div>
           </div>
         </div>
