--- a/source/index.html
+++ b/source/index.html
@@ -72,6 +72,7 @@
                 and refresh its brand to speak to a broader <br>
                 audience. The result was an evolved logo, ...
               </p>
+              <h4 class="view-project">View Project</h4>
             </div>
             <div class="col-3">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/pearsports.png" alt="Pear Sports">
@@ -81,6 +82,7 @@
                 fitness apps were getting lost in a crowded <br>
                 marketplace. Envoy rebuilt the story and ...
               </p>
+              <h4 class="view-project">View Project</h4>
             </div>
             <div class="col-3 last">
               <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/511.png" alt="511">
@@ -90,6 +92,7 @@
                 to Envoy to bring their "Ultimate Training <br>
                 Challenge" to life in the digital space ...
               </p>
+              <h4 class="view-project">View Project</h4>
             </div>
           </div>
         </div>
