Add a div and title for "Wire". #5

--- a/source/index.html
+++ b/source/index.html
@@ -95,6 +95,7 @@
               <h4 class="view-project">View Project</h4>
             </div>
           </div>
+          <h1 id="wire">Wire</h1>
         </div>
       </div>
     </footer>
