Add "View All News" text next to it. #5

--- a/source/index.html
+++ b/source/index.html
@@ -95,7 +95,7 @@
               <h4 class="view-project">View Project</h4>
             </div>
           </div>
-          <h1 id="wire">Wire</h1>
+          <h1 id="wire">Wire<a id="view-work" href="#allwork"> View All News</a></h1>
         </div>
       </div>
     </footer>
