--- a/source/index.html
+++ b/source/index.html
@@ -61,41 +61,54 @@
           </h1>
         </div>
         <div id="divider"></div>
-        <div class="footer-contents-wrapper">
-          <h1 id="work">Featured Work<a id="view-work" href="#allwork"> View All Work</a></h1>
-          <div class="footer-contents">
-            <div class="col-3">
-              <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/boostmobile.png" alt="Boost Mobile">
-              <h3 class="work-title">Boost Mobile <a class="blue-text">Rebrand</a></h3>
-              <p class="work-text">
-                Boost Mobile recognized the need to elevate <br>
-                and refresh its brand to speak to a broader <br>
-                audience. The result was an evolved logo, ...
-              </p>
-              <h4 class="view-project">View Project</h4>
+        <div class="footer-container">
+          <div class="footer-contents-wrapper">
+            <h1 id="work">Featured Work<a class="view-work" href="#allwork"> View All Work</a></h1>
+            <div id="footer-contents-work">
+              <div class="col-3">
+                <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/boostmobile.png" alt="Boost Mobile">
+                <h3 class="work-title">Boost Mobile <a class="blue-text">Rebrand</a></h3>
+                <p class="work-text">
+                  Boost Mobile recognized the need to elevate <br>
+                  and refresh its brand to speak to a broader <br>
+                  audience. The result was an evolved logo, ...
+                </p>
+                <h4 class="view-project">View Project</h4>
+              </div>
+              <div class="col-3">
+                <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/pearsports.png" alt="Pear Sports">
+                <h3 class="work-title">Pear Sports <a class="blue-text">Training Portal</a></h3>
+                <p class="work-text">
+                  Pear Sports revolutionary training systems and <br>
+                  fitness apps were getting lost in a crowded <br>
+                  marketplace. Envoy rebuilt the story and ...
+                </p>
+                <h4 class="view-project">View Project</h4>
+              </div>
+              <div class="col-3 last">
+                <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/511.png" alt="511">
+                <h3 class="work-title">5.11<a class="blue-text"> Ultimate Training Experience</a></h3>
+                <p class="work-text">
+                  5.11, the industry leader in tactical gear turned <br>
+                  to Envoy to bring their "Ultimate Training <br>
+                  Challenge" to life in the digital space ...
+                </p>
+                <h4 class="view-project">View Project</h4>
+              </div>
             </div>
-            <div class="col-3">
-              <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/pearsports.png" alt="Pear Sports">
-              <h3 class="work-title">Pear Sports <a class="blue-text">Training Portal</a></h3>
-              <p class="work-text">
-                Pear Sports revolutionary training systems and <br>
-                fitness apps were getting lost in a crowded <br>
-                marketplace. Envoy rebuilt the story and ...
-              </p>
-              <h4 class="view-project">View Project</h4>
-            </div>
-            <div class="col-3 last">
-              <img src="/Users/hoshikitsunoda/envoy-code-test/src-images/511.png" alt="511">
-              <h3 class="work-title">5.11<a class="blue-text"> Ultimate Training Experience</a></h3>
-              <p class="work-text">
-                5.11, the industry leader in tactical gear turned <br>
-                to Envoy to bring their "Ultimate Training <br>
-                Challenge" to life in the digital space ...
-              </p>
-              <h4 class="view-project">View Project</h4>
+            <h1 id="wire">Wire<a class="view-work" href="#allwork"> View All News</a></h1>
+            <div id="footer-contents-news">
+              <div class="col-3">
+
+              </div>
+              <div class="col-3">
+
+              </div>
+              <div class="col-3">
+
+              </div>
             </div>
           </div>
-          <h1 id="wire">Wire<a id="view-work" href="#allwork"> View All News</a></h1>
         </div>
       </div>
     </footer>
