Add date underneath the news title. #5

--- a/source/index.html
+++ b/source/index.html
@@ -110,6 +110,7 @@
                   Lets Envoy Loose <br>
                   on Sin City 2
                 </h1>
+                <h5 class="date">May 1, 2013</h5>
               </div>
               <div class="col-3-wire">
                 <h1 class="wire-h1">
@@ -117,13 +118,15 @@
                   as New Digital <br>
                   Agency
                 </h1>
+                <h5 class="date">May 1, 2013</h5>
               </div>
               <div class="col-3-wire last-wire">
-                <h1 class="wire-h1">
+                <h1 class="wire-h1" id="blue">
                   Pear Breaks <br>
                   Ground on Ground <br>
                   Breaking App
                 </h1>
+                <h5 class="date">May 1, 2013</h5>
               </div>
             </div>
           </div>
