--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#ventures">Ventures</a></li>
           <li><a href="#about" id="about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact" id="contact">Contact</a></li>
           <li><a href="#blog">Blog</a></li>
         </ul>
       </nav>
